# Uni.CCSDS

./: .gitignore  AGENTS.md  CMakeLists.txt  Doxyfile  LICENSE.md  README.md
cmake/: cpm-uni.crypto.cmake
docs/: uslp.md  uslp_faq.md  uslp_pics.md
include/: uni_ccsds.h  uni_ccsds_uslp.h  uni_ccsds_uslp_internal.h
src/: uni_ccsds_lfsr_oid.c  uni_ccsds_uslp_primary_header.c  uni_ccsds_uslp_sdls.c  uni_ccsds_uslp_status.c  uni_ccsds_uslp_tfdf_header.c  uni_cssds_uslp.c
src_tests/: CMakeLists.txt  test_crc16_lfsr.cpp  test_directive_management.cpp  test_frame_build_parse.cpp  test_fuzz_parser.cpp  test_insert_loss_flag.cpp  test_insert_service.cpp  test_mapa_loss_flag.cpp  test_mapa_notify.cpp  test_master_channel_generation.cpp  test_mcf_service.cpp  test_multiplexing.cpp  test_ocf_insert.cpp  test_ocf_loss_flag.cpp  test_ocf_policy.cpp  test_octet_stream.cpp  test_octet_stream_notify.cpp  test_packet_service.cpp  test_primary_header.cpp  test_sdls_aead.cpp  test_sdls_hmac.cpp  test_tfdf_header.cpp  test_truncated_frames.cpp  test_vc_managed_params.cpp  test_vca_service.cpp  test_vca_verification.cpp  test_vcf_counters.cpp  test_vcf_exp_counters.cpp  test_vcf_mcf_request.cpp  test_vcf_service.cpp  test_vcp_service.cpp  uni_ccsds_tests.cpp
src_tools/: CMakeLists.txt  tool_bench.c  tool_cli.c
src_validation/: CMakeLists.txt  README.md
src_validation/bridges/nasa/: CMakeLists.txt
src_validation/bridges/nasa/include/uslp_validation/: nasa_bridge.hpp
src_validation/bridges/nasa/src/: nasa_bridge.cpp
src_validation/bridges/python/: CMakeLists.txt
src_validation/bridges/python/include/uslp_validation/: python_bridge.hpp
src_validation/bridges/python/runner/: runner.py
src_validation/bridges/python/src/: python_bridge.cpp
src_validation/cli/: CMakeLists.txt
src_validation/cli/src/: main.cpp
src_validation/docs/: ARCHITECTURE.md
src_validation/harness/: CMakeLists.txt
src_validation/harness/include/uslp_validation/: engine.hpp  metrics_writer.hpp  scenario.hpp  scenario_loader.hpp
src_validation/harness/src/: engine.cpp  metrics_writer.cpp  scenario_loader.cpp
src_validation/resources/schema/: scenario.schema.json
src_validation/resources/suites/: baseline.scn
